<resources>
    <string name="app_name">GroceriesMart</string>
    <string name="loader_image_description">PlantCare Loader</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">LOGIN</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="signup_text">Don\'t have an Account? Sign up</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign-in</string>
    <string name="email_input">Email Address</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_phone_number">Confirm Phone number</string>
    <string name="password_hintconfirm">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_otp_button">Send OTP Code</string>
    <string name="send_otp_email">Send OTP Via Email</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="verify_otp_button">Verify OTP</string>
    <string name="admin">Admin</string>
    <string name="buyer">Client</string>
</resources>